Changed EmailMessageDTO to MimeMessage